// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetStart renders 0 1`] = `
Array [
  .c0 {
  offset-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders function 1`] = `
Array [
  .c0 {
  offset-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders invalid theme path 1`] = `
Array [
  .c0 {
  offset-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders negative number 1`] = `
Array [
  .c0 {
  offset-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  offset-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  offset-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    offset-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    offset-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  offset-start: July;
}

@media May {
  .c0 {
    offset-start: August;
  }
}

@media April {
  .c0 {
    offset-start: September;
  }
}

@media January {
  .c0 {
    offset-start: November;
  }
}

@media April {
  .c0 {
    offset-start: August;
  }
}

@media June {
  .c0 {
    offset-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset-start: July;
}

@media May {
  .c0 {
    offset-start: August;
  }
}

@media April {
  .c0 {
    offset-start: September;
  }
}

@media January {
  .c0 {
    offset-start: November;
  }
}

@media April {
  .c0 {
    offset-start: August;
  }
}

@media June {
  .c0 {
    offset-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  offset-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-start: November;
  }
}

@media April {
  .c0 {
    offset-start: January;
  }
}

@media January {
  .c0 {
    offset-start: December;
  }
}

@media April {
  .c0 {
    offset-start: April;
  }
}

@media June {
  .c0 {
    offset-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-start: November;
  }
}

@media April {
  .c0 {
    offset-start: January;
  }
}

@media January {
  .c0 {
    offset-start: December;
  }
}

@media April {
  .c0 {
    offset-start: April;
  }
}

@media June {
  .c0 {
    offset-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    offset-start: July;
  }
}

@media April {
  .c0 {
    offset-start: August;
  }
}

@media January {
  .c0 {
    offset-start: September;
  }
}

@media April {
  .c0 {
    offset-start: November;
  }
}

@media June {
  .c0 {
    offset-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    offset-start: July;
  }
}

@media April {
  .c0 {
    offset-start: August;
  }
}

@media January {
  .c0 {
    offset-start: September;
  }
}

@media April {
  .c0 {
    offset-start: November;
  }
}

@media June {
  .c0 {
    offset-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-start: January;
  }
}

@media April {
  .c0 {
    offset-start: December;
  }
}

@media January {
  .c0 {
    offset-start: April;
  }
}

@media April {
  .c0 {
    offset-start: May;
  }
}

@media June {
  .c0 {
    offset-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-start: January;
  }
}

@media April {
  .c0 {
    offset-start: December;
  }
}

@media January {
  .c0 {
    offset-start: April;
  }
}

@media April {
  .c0 {
    offset-start: May;
  }
}

@media June {
  .c0 {
    offset-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders postitive number 1`] = `
Array [
  .c0 {
  offset-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders string 1`] = `
Array [
  .c0 {
  offset-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`offsetStart renders valid theme path 1`] = `
Array [
  .c0 {
  offset-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
